texi2html/test/invalid/res_all/texi_node_in_copying/node_in_copying.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename node_in_copying.info

@node Top
@top Top section

@insertcopying

This is a manual testing @@node appearing within an unterminated @@copying.

@bye
